--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" onclick="alert('oi')">
+            <img class="robo" src="img/robotron.png" alt="Robotron" onclick="alert('bah né meo')">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
